# SQUINT

./: .gitignore  API_Reference.md  Commit_plan.bash  Contributing  Examples.md  GETTING_STARTED.md  LICENSE  README.md  SQUINT vs Q#  SQUINT-Floquet-Engineering-Demo.html.html  SQUINT-Quantum-Programming-Language.html.html  SQUINT.py  SQUINT_A Quantum Compiler with Unified Thermodynamic, Topological, and Semantic Awareness.tex  cli.py  pyproject.toml  web
.github/workflows/: reproducibility.yml
tests/: run_tests.py
